# simple-threaded-tcp

./: .gitignore  README.md  pyproject.toml
src/sttcp/: __init__.py  client.py  general.py  server.py
tests/: main.py
