[project]
name = "simple_threaded_tcp"
version = "1.5.1"
authors = [
    {name = "Emil", email = "emilahmaboy@gmail.com"}
]
description = "Client-Server threaded TCP connector. This project also uses socket library."
readme = "README.md"
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[testpypi]
username = "__token__"
password = "ha is a secret :P"

[project.urls]
Homepage = "https://github.com/EmilAhmaBoy/simple-threaded-tcp"
Issues = "https://github.com/EmilAhmaBoy/simple-threaded-tcp/issues"